@@ -1,3 +1,10 @@
+Fri May  2 19:13:06 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>
+
+        * tests/DCPS/Federation/Publisher.cpp:
+        * tests/DCPS/Federation/Subscriber.cpp:
+
+          Cleanup publisher, subscriber.
+
 Thu May  1 13:30:28 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>
 
         * tests/DCPS/TransientLocalTest/publisher.cpp:
